Added 2 new files

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -14,16 +14,31 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>San Jose State University - Computer Science 2021</li>
-    <li>De Anza College - 2019</li>
+    <li>San Jose State University, Computer Science 2019-2021</li>
+    <li>De Anza College, Computer Science 2017-2019</li>
   </ul>
-  <h3>My Hobbies</h3>
-  <ol>
-    <li><a href="https://www.chess.com/">Chess</a></li>
-    <li><a href="https://www.imdb.com/list/ls000060680/">Movies</a></li>
-    <li><a href="https://www.iss.edu/blog/importance-of-reading">Reading</a></li>
-    <li><a href="https://github.com/pruth17">Programming</a></li>
-  </ol>
+  <h3>Experience</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tr>
+      <td>2018-2019</td>
+      <td>Computer Science Tutor at CIS Department</td>
+    </tr>
+    <tr>
+      <td>2018</td>
+      <td>TA for Intro to Data Structure Class</td>
+    </tr>
+  </table>
+  <hr>
+  <a href="hobbies.html">My Hobbies</a>
+  <br>
+  <a href="contact.html">Contact Me</a>
+
 
 
 </body>
