--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="background-color:skyblue;">
-  <img src="pruthvi.jpg" height="240" width="240" alt="Pruthvi Profile Picture">
+  <img src="pruthvi.jpg" height="240" width="240" alt="Pruthvi's Profile Picture">
   <h1>Pruthvi Punwar</h1>
   <p> <em>Computer Science Senior at <a href="https://www.sjsu.edu/cs/">San Jose State University</a></em></p>
   <p>My interests lies in Mobile and Web Development. I am always eager to take on new challenges and passionate to learn new technologies.</p>
