--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,18 +7,23 @@
 </head>
 
 <body style="background-color:skyblue;">
-  <img src="pruthvi.jpg" height="240" width="240" alt="Pruthvi's Profile Picture">
-  <h1>Pruthvi Punwar</h1>
-  <p> <em>Computer Science Senior at <a href="https://www.sjsu.edu/cs/">San Jose State University</a></em></p>
-  <p>My interests lies in Mobile and Web Development. I am always eager to take on new challenges and passionate to learn new technologies.</p>
+  <table cellspacing = "20">
+    <tr>
+      <td><img src="pruthvi.jpg" height="240" width="240" alt="Pruthvi's Profile Picture"></td>
+      <td>  <h1>Pruthvi Punwar</h1>
+        <p> <em>Computer Science Senior at <a href="https://www.sjsu.edu/cs/">San Jose State University</a></em></p>
+        <p>My interests lies in Mobile and Web Development. I am always eager to take on new challenges and passionate to learn new technologies.</p></td>
+    </tr>
+  </table>
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>San Jose State University, Computer Science 2019-2021</li>
-    <li>De Anza College, Computer Science 2017-2019</li>
+    <li>San Jose State University, Computer Science,  2019-2021</li>
+    <li>De Anza College, Computer Science,  2017-2019</li>
   </ul>
+  <hr>
   <h3>Experience</h3>
-  <table>
+  <table cellspacing="10">
     <thead>
       <tr>
         <th>Date</th>
@@ -27,7 +32,7 @@
     </thead>
     <tr>
       <td>2018-2019</td>
-      <td>Computer Science Tutor at CIS Department</td>
+      <td>Computer Science Tutor at CIS Department, De Anza College</td>
     </tr>
     <tr>
       <td>2018</td>
@@ -35,8 +40,37 @@
     </tr>
   </table>
   <hr>
+  <h3>Skills</h3>
+
+
+  <table cellspacing = "10">
+    <tr>
+      <td>Java</td>
+      <td>🔥🔥🔥🔥🔥</td>
+      <td>Android Development</td>
+      <td>🔥🔥🔥🔥🔥</td>
+    </tr>
+    <tr>
+      <td>C++</td>
+      <td>🔥🔥🔥🔥</td>
+      <td>Web Development</td>
+      <td>🔥🔥🔥🔥</td>
+    </tr>
+    <tr>
+      <td>Data Structures</td>
+      <td>🔥🔥🔥🔥🔥</td>
+      <td>Object Oriented Design</td>
+      <td>🔥🔥🔥🔥🔥</td>
+    </tr>
+    <tr>
+      <td>Operating System</td>
+      <td>🔥🔥🔥</td>
+      <td>C</td>
+      <td>🔥🔥🔥</td>
+    </tr>
+  </table>
+  <hr>
   <a href="hobbies.html">My Hobbies</a>
-  <br>
   <a href="contact.html">Contact Me</a>
 
 
