--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -7,10 +7,19 @@
 </head>
 
 <body style="background-color:skyblue;">
-  <h3>Contact details</h3>
-  <ol>
-    <li>Email: ppruthvi2017@gmail.com</li>
-  </ol>
+  <h2>Contact details</h2>
+  <p>Email: ppruthvi2017@gmail.com</p>
+<hr>
+
+  <form  action="mailto:ppruthvi2017@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
 
 </body>
 
