updated the files

--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -4,15 +4,14 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="icon.png" />
-  <title></title>
+  <title>Contact Information</title>
 </head>
 
 <body style="background-color:skyblue;">
   <h2>Contact details</h2>
   <p>Email: ppruthvi2017@gmail.com</p>
-<hr>
-
-  <form  action="mailto:ppruthvi2017@gmail.com" method="post" enctype="text/plain">
+  <hr>
+  <form action="mailto:ppruthvi2017@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="yourName" value=""><br>
     <label>Your Email:</label>
@@ -21,6 +20,7 @@
     <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
     <input type="submit" name="">
   </form>
+  <p>This form is only supported by the chrome browser</p>
 
 </body>
 
