updated the color

--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -7,7 +7,7 @@
   <title>Contact Information</title>
 </head>
 
-<body style="background-color:skyblue;">
+<body">
   <h2>Contact details</h2>
   <p>Email: ppruthvi2017@gmail.com</p>
   <hr>
