--- a/HTML - Personal Site/hobbies.html
+++ b/HTML - Personal Site/hobbies.html
@@ -7,7 +7,7 @@
   <title>My Hobbies</title>
 </head>
 
-<body style="background-color:skyblue;">
+<body>
   <h3>My Hobbies</h3>
   <ol>
     <li><a href="https://www.chess.com/">Chess</a></li>
