--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,7 +7,7 @@
   <title>Pruthvi's Site</title>
 </head>
 
-<body style="background-color:skyblue;">
+<body style="background-color: #a6e3e9;">
   <table cellspacing = "20">
     <tr>
       <td><img src="pruthvi.jpg" height="240" width="240" alt="Pruthvi's Profile Picture"></td>
