added css files

--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="icon.png" />
   <title>Contact Information</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body">
-  <h2>Contact details</h2>
+  <h1>Contact details</h1>
   <p>Email: ppruthvi2017@gmail.com</p>
   <hr>
   <form action="mailto:ppruthvi2017@gmail.com" method="post" enctype="text/plain">
