--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -5,22 +5,25 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="icon.png" />
   <title>Pruthvi's Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color: #a6e3e9;">
-  <table cellspacing = "20">
+<body>
+  <table cellspacing="20">
     <tr>
       <td><img src="pruthvi.jpg" height="240" width="240" alt="Pruthvi's Profile Picture"></td>
-      <td>  <h1>Pruthvi Punwar</h1>
+      <td>
+        <h1>Pruthvi Punwar</h1>
         <p> <em>Computer Science Senior at <a href="https://www.sjsu.edu/cs/">San Jose State University</a></em></p>
-        <p>My interests lies in Mobile and Web Development. I am always eager to take on new challenges and passionate to learn new technologies.</p></td>
+        <p>My interests lies in Mobile and Web Development. I am always eager to take on new challenges and passionate to learn new technologies.</p>
+      </td>
     </tr>
   </table>
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>San Jose State University, Computer Science,  2019-2021</li>
-    <li>De Anza College, Computer Science,  2017-2019</li>
+    <li>San Jose State University, Computer Science, 2019-2021</li>
+    <li>De Anza College, Computer Science, 2017-2019</li>
   </ul>
   <hr>
   <h3>Experience</h3>
@@ -44,7 +47,7 @@
   <h3>Skills</h3>
 
 
-  <table cellspacing = "10">
+  <table cellspacing="10">
     <tr>
       <td>Java</td>
       <td>🔥🔥🔥🔥🔥</td>
