--- a/HTML - Personal Site/hobbies.html
+++ b/HTML - Personal Site/hobbies.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="icon.png" />
   <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
