added external css file

--- a/Pizza-Love/index.html
+++ b/Pizza-Love/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Pizza Fansite</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
   <h1>I Love Pizza</h1>
   <p>pizza, pizza, pizza, pizza, pizza, pizza</p>
   <p>pizza, pizza, pizza, pizza, pizza, pizza</p>
   <p>pizza, pizza, pizza, pizza, pizza, pizza</p>
-  <img src="pizza.png" alt="pizza-img">
+  <img class = "pizza circular" src="pizza.png" alt="pizza-img">
 </body>
 
 </html>
