--- a/Pizza-Love/index.html
+++ b/Pizza-Love/index.html
@@ -11,7 +11,8 @@
   <p>pizza, pizza, pizza, pizza, pizza, pizza</p>
   <p>pizza, pizza, pizza, pizza, pizza, pizza</p>
   <p>pizza, pizza, pizza, pizza, pizza, pizza</p>
-  <img class = "pizza circular" src="pizza.png" alt="pizza-img">
+  <img class = "pizza" src="pizza.png" alt="pizza-img">
+  <img class="beer" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/beer-mug_1f37a.png" alt="beer-img">
 </body>
 
 </html>
