--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -5,12 +5,62 @@
     <title>Pruthvi's website</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Martel&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="">
-      <h1>I'm Pruthvi.</h1>
-      <p>A developer.</p>
+    <div class="top-container">
+      <img class="top-cloud"src="images/cloud.png" alt="cloud-image">
+      <h1>I'm Pruthvi</h1>
+      <p>An avid developer.</p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+      <img src="images/mountain.png" alt="mountain-image">
     </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="pic" src="pruthvi.jpg" alt="Pruthvi's picture">
+        <h2>Hello.</h2>
+        <p>I am a senior at San Jose State University, majoring in Computer Science.</p>
+        <p>My interests lies in Mobile and Web Development, Backend Developemnt, Data Structures, Algorithms and Databases. I am always eager to take on new challenges and am passionate to learn new technologies.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="" src="images/website-design.png" alt="computer's picture">
+          <h3>Web Development</h3>
+          <p>Knowledgeable in HTML, CSS, JavaScript, BootStrap, React, NodeJS, JQuery, MangoDB. Aim to develope websites that are user friendly and elegant.</p>
+        </div>
+        <div class="skill-row">
+          <img class="" src="images/software-developer.png" alt="chillies' picture">
+          <h3>Mobile Developemnt</h3>
+          <p>Experienced in developing fully furnished Android and iOS apps.</p>
+        </div>
+        <div class="skills-rows">
+          <img src="images/ui.png" alt="dataStructures">
+          <h3>Data Structures and Databases</h3>
+          <p>Highly Knowledgeable in different kind of Data Structures, its algorithms and Databases. </p>
+
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you love developing apps and websites as much as I do.</h3>
+        <p>We'll talk about our favourite movies and TV shows. We can code and exchange ideas while we are at it.</p>
+        <a class="btn" href="mailto:ppruthvi2017@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/pruthvipunwar/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/pruth17">Twitter</a>
+      <p>© 2020 Pruthvi Punwar.</p>
+    </div>
+
 
   </body>
 </html>
