--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -59,8 +59,8 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/pruthvipunwar/">LinkedIn</a>
-    <a class="footer-link" href="https://github.com/pruth17">GitHub</a>
+    <a target="_blank" rel="noopener noreferrer" class="footer-link" href="https://www.linkedin.com/in/pruthvipunwar/">LinkedIn</a>
+    <a target="_blank" rel="noopener noreferrer" class="footer-link" href="https://github.com/pruth17">GitHub</a>
     <p class="name-copyright">© 2020 Pruthvi Punwar.</p>
   </div>
 
