completed jquery intro

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <h1>World!</h1>
     <button>click me</button>
     <button>click me</button>
     <button>click me</button>
     <button>click me</button>
     <button>click me</button>
+
+    <input type="text" name="" value="">
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
