--- a/WeatherProject/index.html
+++ b/WeatherProject/index.html
@@ -2,14 +2,39 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Weather App</title>
   </head>
   <body>
-    <form class="" action="/" method="post">
-    <label for="cityInput">CityName:</label>
-    <input id="cityInput"type="text" name="City" value="">
-    <button type="submit">Submit</button>
-    </form>
+    <body class="text-center">
+      <main class="form-signin">
+        <form class="" action="/" method="post">
+          <div class="">
+          <h1 class="h3 mb-3 fw-normal">Enter City</h1>
+          <label for="inputEmail" class="virtually-hidden"></label>
+          <input id="inputEmail" name="City" class="form-control" placeholder="City" required="" autofocus="">
+          <div class="maruche">
+          <button class="btn btn-primary intea" type="submit">Submit</button>
+        </div>
+          <p class="mt-5 mb-3 text-muted">© 2021</p>
+
+        </form>
+
+      </main>
+
+      <div id="ext_session_alive_reload_prompt" style="display: none;">
+        <div>
+          <div>To Keep Your Session Active<br>page will reload in
+            <span id="session_live_reloader_countdown">30</span> seconds<br>
+            <a id="ext_session_alive_reload_rule_id" href="chrome-extension://lhobbakbeomfcgjallalccfhfcgleinm/settings.html" target="_rule_settings">Edit Rule<br>
+            </a></div><div><button type="button" id="ext_session_alive_reload_cancel">Wait 1 minute
+            </button>
+          </div>
+        </div>
+      </div>
 
 
   </body>
